[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prob-toolkit"
version = "0.1.0"
description = "Modern probabilistic data structures library: Bloom filters, Cuckoo filters, HyperLogLog, Count-Min Sketch, MinHash, and more"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "EdgarOrtegaRamirez" }
]
keywords = [
    "probabilistic",
    "data-structures",
    "bloom-filter",
    "cuckoo-filter",
    "hyperloglog",
    "count-min-sketch",
    "minhash",
    "quotient-filter",
    "hashing",
    "cardinality-estimation",
    "membership-testing",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Database",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.10",
]

[project.scripts]
prob-toolkit = "prob_toolkit.cli:main"

[project.urls]
Homepage = "https://github.com/EdgarOrtegaRamirez/prob-toolkit"
Repository = "https://github.com/EdgarOrtegaRamirez/prob-toolkit"
Issues = "https://github.com/EdgarOrtegaRamirez/prob-toolkit/issues"

[tool.hatch.build.targets.wheel]
packages = ["prob_toolkit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
]
